Fix background colour not cropped by border radius

--- a/radio.css
+++ b/radio.css
@@ -3,6 +3,7 @@ ul.segmented {
   margin: 0.2em 0 1em;
   border-radius: 0.7em;
   background-color: rgba(0, 0, 0, 0.5);
+  background-clip: padding-box;
   border-top: 1px solid rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
@@ -21,6 +22,7 @@ ul.segmented > li > label {
   display: block;
   cursor: pointer;
   border-radius: 0.7em;
+  background-clip: padding-box;
   text-align: center;
   padding: 0.1em 0.5em;
   margin: 0;
